--- a/assets/index.css
+++ b/assets/index.css
@@ -491,7 +491,7 @@ body{
         left: -10px;
         background-color: transparent;
         z-index: 99999;
-        color: black;
+        color: #F0C929;
         background-color: #AC0D0D;
         padding-top: 30px;
     }
