--- a/assets/mobile.css
+++ b/assets/mobile.css
@@ -391,7 +391,7 @@
         padding-top: 30px;
         background-color: transparent;
         z-index: 99999;
-        color: black;
+        color: #F0C929;
         background-color: #AC0D0D;
     }
 
